DDD対応 (#3)
* add user

* change login to ddd

* remove unused files

* fix pom / add log domain

* fix log domain

* add code format

* format by maven

* ddd for sample api

* change to ddd

* remove volume

* fix refresh token logic

* refresh tokenの仕組みを実装

---------

Co-authored-by: Kyosuke <kyosuke@Kyosukes-MacBook-Pro-lacicu.local>