@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
@@ -14,28 +14,37 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.4</version>
+        <version>3.0.5</version>
         <relativePath/>
     </parent>
 
     <properties>
-<!--        <spring-boot.run.jvmArguments>-Duser.timezone=UTC</spring-boot.run.jvmArguments>-->
-        <java.version>18</java.version>
+        <java.version>20</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- <org.springframework.boot.mail>2.7.5</org.springframework.boot.mail>-->
-        <com.accelhack.accelparts.core.version>2.0.0</com.accelhack.accelparts.core.version>
-        <org.mybatis.spring.boot.version>2.2.2</org.mybatis.spring.boot.version>
+        <!--<com.accelhack.accelparts.core.version>2.0.0</com.accelhack.accelparts.core.version>-->
+        <org.mybatis.spring.boot.version>3.0.5</org.mybatis.spring.boot.version>
         <org.mybatis.dynamic-sql.version>1.3.0</org.mybatis.dynamic-sql.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.accelhack.accelparts</groupId>
-            <artifactId>http</artifactId>
-            <version>${com.accelhack.accelparts.core.version}</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
         </dependency>
+        <dependency>
+            <groupId>com.accelhack.accelparts</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0.4</version>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.accelhack.accelparts</groupId>-->
+        <!--            <artifactId>http</artifactId>-->
+        <!--            <version>${com.accelhack.accelparts.core.version}</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -177,8 +186,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>20</source>
+                    <target>20</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -186,6 +196,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>-Duser.timezone=UTC</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.11.0</version>
+                <configuration>
+                    <configFile>${project.basedir}/eclipse-java-google-style.xml</configFile>
                 </configuration>
             </plugin>
 
